@@ -1,18 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX xfce4-sensors-plugin-1.2.3-linux-3.x.patch 510 RMD160 fb6c5c0fc9a800009d50790ef4fec606188d83b0 SHA1 dfae019c9f271e3d4ebc84c5ddb46e848e08089d SHA256 fb6d68c24753ca8f93fc903d9e1852cba205740124f2d77b33d92b3a2512fc9e
 DIST xfce4-sensors-plugin-1.2.3.tar.bz2 418517 RMD160 27ba953568b82a47f74392a42b3d79f089006cc1 SHA1 a6abc97407d697ddf320e6d559594206228f3c77 SHA256 3dd27348f7b38b55e53aa8d851cdb80e090b8830ca9e705bf32641679f08d326
+DIST xfce4-sensors-plugin-1.2.4.tar.bz2 436141 RMD160 ef6e7ee09a1db9cf2621bf49548e2e6a99d91e65 SHA1 32ab4e804dd1d181a003cc776e284c6dffdfd9e5 SHA256 74d5b5fcec1c115e23d62d570b944d3cf5d3107096b5aa76aef8b177fdbe6cbe
 EBUILD xfce4-sensors-plugin-1.2.3-r1.ebuild 2016 RMD160 9ed045b17a6c9ba0cbde12e6ce3fc2409097f5a6 SHA1 6fc04d2e0bb501c0ee85248dece72b6fc1205298 SHA256 f0be6a3ef6dfab938fc1b920b0a4d8a3b19479c4da5d26886aac652202fe32cc
 EBUILD xfce4-sensors-plugin-1.2.3.ebuild 1823 RMD160 eac55a12e560fb108a7e7d36e2180f4f4d5e411c SHA1 a402129d4628a2be4738d39bca48742854fa7343 SHA256 64c25f4dcb8f08044226ea1c5c27e4046c31db008130d3101bccb2f33eb40679
-MISC ChangeLog 5623 RMD160 6e82fa8e0def2d13886aaef58bb274a6936f64ba SHA1 c97784c3c7c20df3feb1eff517583839fdfafb3f SHA256 460aed4416acafda0251631f049281e45368e040af58351ded7e17fbf84d062f
+EBUILD xfce4-sensors-plugin-1.2.4.ebuild 1703 RMD160 61fe0635c3516dbdd82eae7b97139b79ee2cf597 SHA1 1c0d16674200eddd2ad45969ae97b10f054a336a SHA256 e7703a057368a1f54c12c656bf8fd7a7c180a33f87736c7a1e6972db5933d536
+MISC ChangeLog 5778 RMD160 162c071596426e5f48070ca374127fd9cb038646 SHA1 47942f227c8970a41af7792742f54d9de0e3d7e0 SHA256 45882ab017d69472e67777c5f428101d57be13de851ccfb31883a9f933a982b4
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk+k1nAACgkQfXuS5UK5QB3neAP/YXo3UR0H5qVd6TfSb0Aubom9
-Gvp6oAiwD8hKWqOitbh7tB3zinIJRQTzM15tY79yneuNUUkoozHHuljxMXnw5k3A
-AUuBas5quqZVVNXPMnlrDqP/gwT+Yy/PuCIoKhOvaSHCLCtgyvaZZPwvAV02bUKY
-3/Gwt9EZWRvqkjg/ryQ=
-=1Hp7
+iQEcBAEBAgAGBQJPsOEiAAoJEEdUh39IaPFNTZUH/2sdhyD0REBA7OCqEXnL4n8n
+egq1/ltG3G82/uDjm41qxtNrjNmLA6UyN+D2rDUqdhUCHaIHJXwF/6VKc9MkvN+g
+NvQyKf76FxAN4QrndudZ84b489Sp+SGNL3zsYJfaQ0yUcuXxHnCRiOwziMHnAHTg
+HivfUvsV5G8avuGpmXxjyFHYIYNEjck7IVuSLj65t1x2ERp8O5uFOMvFiGUNuAOM
+l3pstsD5l3g/6Fu524zLKeyl+NaEhyzOFhB4vuGzJ7QGmF15aXrg55B1pM5J+45r
+arU/z7hUJzii+/WL+oiXeM/EnibUVBmzFG82z93w1AgLEbehT/Z3vHDDGsf7h6U=
+=PHPb
 -----END PGP SIGNATURE-----
