@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-sensors-plugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-sensors-plugin/ChangeLog,v 1.33 2012/05/05 07:26:09 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-sensors-plugin/ChangeLog,v 1.34 2012/05/14 10:43:48 ssuominen Exp $
+
+*xfce4-sensors-plugin-1.2.4 (14 May 2012)
+
+  14 May 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +xfce4-sensors-plugin-1.2.4.ebuild:
+  Version bump.
 
   05 May 2012; Michał Górny <mgorny@gentoo.org>
   xfce4-sensors-plugin-1.2.3.ebuild, xfce4-sensors-plugin-1.2.3-r1.ebuild:
